force-app/main/default/objects/Application__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>