force-app/main/default/objects/Application__c/fields/Searcher_Contact__c.field-meta.xml
<CustomField>
    <fullName>Searcher_Contact__c</fullName>
    <label>Searcher Contact</label>
    <referenceTo>Searcher__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>