force-app/main/default/objects/Application__c/fields/Use_Card_on_File__c.field-meta.xml
<CustomField>
    <fullName>Use_Card_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Card on File</label>
    <type>Checkbox</type>
</CustomField>