force-app/main/default/objects/Application__c/validationRules/Get_Payment_Option.validationRule-meta.xml
<ValidationRule>
    <fullName>Get_Payment_Option</fullName>
    <active>true</active>
    <errorConditionFormula>Use_Card_on_File__c = False &amp;&amp;  Card_Number__c = NULL</errorConditionFormula>
    <errorMessage>Please select a payment option, either use a card on file or enter the card information below.</errorMessage>
</ValidationRule>